<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- 状态栏 -->
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" >
        <ImageButton
            android:id="@+id/header_left_img"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/header_press_view_padding_left"
            android:paddingRight="@dimen/header_press_view_padding_right"
            android:src="@drawable/ic_user"
            android:background="@drawable/bg_btn_rectangle_transparent_pressed_translucent_gray" />

        <!-- 中间的标题 -->
        <TextView
            android:id="@+id/header_center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/anker"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

    <!-- Lucky -->
    <Button
        android:id="@+id/btn_lucky"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:background="@drawable/bg_btn_rect_orange"
        android:singleLine="true"
        android:text="@string/rent_go_lucky"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <!-- 地图 -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/header"
        android:layout_above="@id/btn_lucky" />

    <!-- 搜索栏 -->
    <RelativeLayout
        android:id="@+id/search_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/header"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_frame_black_body_white_pressed_gray" >

        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="12dp"
            android:src="@drawable/ic_search_gray" />

        <TextView
            android:id="@+id/search_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@null"
            android:paddingLeft="28dp"
            android:paddingRight="28dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:singleLine="true"
            android:ellipsize="start"
            android:text="@string/rent_search_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

</RelativeLayout>
